--- a/mfc6.vcxproj
+++ b/mfc6.vcxproj
@@ -183,16 +183,24 @@
     </ResourceCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="AppResourceDefines.h" />
+    <ClInclude Include="DatabaseManager.h" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="MainFrm.h" />
     <ClInclude Include="mfc6.h" />
     <ClInclude Include="mfc6Doc.h" />
     <ClInclude Include="mfc6View.h" />
     <ClInclude Include="pch.h" />
+    <ClInclude Include="Record.h" />
+    <ClInclude Include="RecordDlg.h" />
+    <ClInclude Include="RecordsDialog.h" />
     <ClInclude Include="Resource.h" />
+    <ClInclude Include="sqlite3.h" />
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="UserDialog.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="DatabaseManager.cpp" />
     <ClCompile Include="MainFrm.cpp" />
     <ClCompile Include="mfc6.cpp" />
     <ClCompile Include="mfc6Doc.cpp" />
@@ -203,6 +211,13 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="RecordDlg.cpp" />
+    <ClCompile Include="RecordsDialog.cpp" />
+    <ClCompile Include="sqlite3.c">
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">NotUsing</PrecompiledHeader>
+      <CompileAs Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">CompileAsC</CompileAs>
+    </ClCompile>
+    <ClCompile Include="UserDialog.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="mfc6.rc" />
