--- a/mfc6.rc
+++ b/mfc6.rc
@@ -198,7 +198,7 @@ STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSM
 CAPTION "记录管理"
 FONT 9, "MS Shell Dlg", 0, 0, 0x1
 BEGIN
-    CONTROL         "",IDC_LIST_RECORDS,"SysListView32",LVS_LIST | WS_BORDER | WS_TABSTOP,7,7,306,160
+    CONTROL         "",IDC_LIST_RECORDS,"SysListView32", LVS_REPORT | WS_BORDER | WS_TABSTOP,7,7,306,160
     PUSHBUTTON      "新增",IDC_BTN_ADD,7,170,60,14
     PUSHBUTTON      "编辑",IDC_BTN_EDIT,74,170,60,14
     PUSHBUTTON      "删除",IDC_BTN_DELETE,141,170,60,14
@@ -227,7 +227,7 @@ STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSM
 CAPTION "用户管理"
 FONT 9, "MS Shell Dlg", 0, 0, 0x1
 BEGIN
-    CONTROL         "",IDC_LIST_USERS,"SysListView32",LVS_LIST | WS_BORDER | WS_TABSTOP,7,7,306,140
+    CONTROL         "",IDC_LIST_USERS,"SysListView32", LVS_REPORT | WS_BORDER | WS_TABSTOP,7,7,306,140
     PUSHBUTTON      "新增",IDC_BTN_USER_ADD,7,152,60,14
     PUSHBUTTON      "删除",IDC_BTN_USER_DEL,74,152,60,14
 END
